<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BookCard</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="main_string1">필독서 목록</string>
    <string name="main_string2">전체 도서</string>
    <string name="main_string3">읽은 도서</string>
    <string name="main_string4">읽지않은 도서</string>
    <string name="main_string5">학년을 선택해주세요.</string>

</resources>